separando componentes de Main.jsx

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ body {
 }
 
 header{
-  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,6 +60,10 @@ header > h1 {
   /* align-items: center; */
 }
 
+form {
+  margin-bottom: 20px;
+}
+
 .add-ing > input {
   border-radius: 6px;
   border: 1px solid #D1D5DB;
@@ -78,7 +81,64 @@ header > h1 {
   width: 150px;
 }
 
+ul.ingredients-list {
+  margin-bottom: 20px;
+  padding-left: 20px; /* Ajusta la distancia entre el punto y el texto */
+  list-style-position: inside; /* Hace que el punto se alinee mejor con el texto */
+}
 
+ul.ingredients-list > li {
+  color: #475467;
+  line-height: 20px;
+  font-size: 16px; /* Ajusta el tamaño para que se vea más claro */
+  font-weight: 500; /* Un poco más grueso para mejor visibilidad */
+}
+
+
+.get-recipe-container {
+  display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 8px;
+    background: #F0EFEB;
+    padding: 10px 28px;
+}
+
+.get-recipe-container h3 {
+  font-size: 1.125rem;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.get-recipe-container p {
+  color: #6B7280;
+  font-size: 0.875rem;
+  line-height: 20px;
+}
+
+.get-recipe-container button {
+  border: none;
+  border-radius: 6px;
+  background: #D17557;
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
+  color: #FAFAF8;
+  padding: 9px 17px;
+  font-family: Inter, sans-serif;
+  font-size: 0.875rem;
+  cursor: pointer;
+}
+
+
+.suggested-recipe-container {
+  color: #475467;
+  line-height: 28px;
+  font-size: 1.125rem;
+  font-weight: 400;
+}
+
+.suggested-recipe-container ul li, .suggested-recipe-container ol li {
+  margin-bottom: 8px;
+}
 
 /*  */
 
